--- a/Tp-Final-labo4/angular.json
+++ b/Tp-Final-labo4/angular.json
@@ -44,6 +44,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
